# mcp-scanner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  readme.md  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
mcp_scanner/: __init__.py  cli.py  models.py  parser.py  scanner.py
mcp_scanner/rules/: __init__.py  checks.py
tests/: test_scanner.py
