[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfx-mcp-scanner"
version = "0.2.0"
description = "Security scanner for MCP (Model Context Protocol) servers. Detect malicious tools, data exfiltration, and supply chain risks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Dockfix Labs", email = "security@dockfixlabs.dev"}]
keywords = ["mcp", "model-context-protocol", "security", "scanner", "ai-agents", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
mcp-scanner = "mcp_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/dockfixlabs/mcp-scanner"
Documentation = "https://github.com/dockfixlabs/mcp-scanner#readme"
Issues = "https://github.com/dockfixlabs/mcp-scanner/issues"
"Security Policy" = "https://github.com/dockfixlabs/mcp-scanner/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
